# Private-Agent

./: -files --others --exclude-standard  .dockerignore  .gitignore  AGENT-LINK-FEATURE.md  AGENT-WORLD-GREY-THEME.md  EMAIL_TAB_FILE_INDEX.md  QUICKSTART_EMAIL_TAB.md  _chat_build_snippet.txt  agent-link-server.js  agent-link.html  agent-result-card.html  companion-layout-preview.html  dev-urls.json  docker-compose.yml  jarvis-agent-ui.html  notes-mockup.html  package-lock.json  package.json  start-agent-link.bat  start-translate.ps1  start-with-agent-world.ps1
agent-sphere-avatar/: README.md  embed.html  free.html  index.html  overlay.html  package-lock.json  package.json  schedule-floating.html  vite.config.ts  wrangler.jsonc
agent-world/: MIGRATION-CHECKLIST.md  README.md  agent-world-chat-tools.ts  doudizhu-chat-tools.ts  host-types.ts  index.ts  package.json  protocol-unified.ts  protocol-world.ts  schemas.ts  tsconfig.build.json  tsconfig.json  vitest.config.ts
data/: world-state.json
desktop-translate/: .gitignore  install-deps.ps1  pyproject.toml  requirements.txt
desktop-translate/translate_tray/: __init__.py  __main__.py  translate_api_client.py  translate_result_window.py  translate_snipping.py  translate_tray.py
desktop-visual/: pyproject.toml  requirements.txt  start-bridge.ps1  start-paddle-ocr.ps1  start-translate-tray.ps1
docs/: AGENT-PROTOCOL-CATALOG.md  AIP.md  ARCHITECTURE.md  CARE-REMINDER-GUIDE.md  PLAN.md  TEST-CASES.md  UI-WIREFRAME.md  UNIFIED-AGENT-PROTOCOL.md
scripts/: dev-all.mjs  dev-server-watch.mjs  spawn-openclaw-gateway.mjs  (+1 more)
(+691 files in other folders)
