[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-translate"
version = "0.1.0"
description = "Standalone desktop screen-translation tray (system tray + global hotkey + floating result window)"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10.0.0",
  "httpx>=0.27.0",
  "pystray>=0.19.5",
  "pynput>=1.7.6",
]

[project.scripts]
desktop-translate = "translate_tray.translate_tray:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["translate_tray*"]
